# Multibranch-TimeSeries-NN

./: .gitignore  README.md  best_model.pt  data_work.ipynb  pyproject.toml  training.ipynb
data/: data_work.ipynb
helpers/: EarlyStopping.py  Tester.py  Trainer.py  YoutubeDataset.py
model/: GRU.py  GRULayer.py  LSTM.py  LSTMLayer.py  LSTMModel.py  MultiBranch.py  MultiBranchModel.py  YoutubeDataset.py
models/: gru_model.pt
src/: training.ipynb
src/data/: data_work.ipynb
src/helpers/: Trainer.py
src/model/: GRUModel.py  MultiBranchModel.py
src/models/: 10_multibranch_model.pt  11_lstm_model.pt  12_gru_model.pt  13_multibranch_model.pt  14_lstm_model.pt  15_gru_model.pt  16_multibranch_model.pt  17_lstm_model.pt  18_gru_model.pt  1_multibranch_model.pt  2_lstm_model.pt  3_gru_model.pt  4_multibranch_model.pt  5_lstm_model.pt  6_gru_model.pt  7_multibranch_model.pt  8_lstm_model.pt  9_gru_model.pt  lstm_model.pt  multibranch_model.pt
src/results/: results.csv
